--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,9 @@
       text-decoration: none;
       color: inherit;
     }
+    body{
+      background-color: rgb(226, 221, 216);
+    }
   </style>
   <title>Blog React App</title>
 </head>
